# seizure-onset-detector

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: test.yml
figures/: cohort_summary.csv
notebooks/: baseline_results.ipynb  eda.ipynb  feature_check.ipynb
results/: baseline_curves.csv  baseline_metrics.csv  event_curves.csv  event_metrics.csv
scripts/: download_manifest.json  download_swec.py  train_baseline.py
src/seizure_onset_detector/: __init__.py  cache.py  data.py  evaluate.py  features.py  models.py
tests/: test_cache.py  test_data.py  test_evaluate.py  test_features.py  test_models.py  test_smoke.py
