[project]
name = "seizure-onset-detector"
version = "0.1.0"
description = "Seizure onset detection on iEEG"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Ashley Tan", email = "ashleytansb@gmail.com" },
]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "mne>=1.6",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "seaborn>=0.13",
    "mat73>=0.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]
dl = [
    "torch>=2.2",
]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "tabulate>=0.10"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seizure_onset_detector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["notebooks/"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[dependency-groups]
dev = [
    "nbstripout>=0.9.1",
]
